Fixes the top bar and main page being out of sync. apparently aligning from the right vs left sides does not come out the same

--- a/public_html/sdd/default.css
+++ b/public_html/sdd/default.css
@@ -96,7 +96,7 @@
     color: #666666;
    
     position: absolute;
-    left: 22%;
+    right: 1%;
     top: 1%;
     
     width: 77%;
